--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <section class="story">
                 <div class="container flex item-center">
                     <div class="flex-48 iframe-container">
-                        <iframe src="https://www.youtube.com/embed/IlYUUN8rL_Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="500" height="378" src="https://www.youtube.com/embed/IlYUUN8rL_Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="flex-48">
                         <h4>
@@ -419,14 +419,14 @@
             
         </main>
         <hr>
-        <footer>
-            <div class="container flex item-center sm-flex-col" >
+        <footer class="footer-link">
+            <div class="container flex item-center  sm-flex-col" >
                 <div class="flex1 item-center">
                     <p class="footer-logo">Linked <span>in</span></p>
                 <span class="copy">&copy;2020</span>
                 </div>
                 <nav>
-                    <ul class="flex sm-flex-col sm-flex">
+                    <ul class="flex sm-flex-col ">
                         <li>
                             <a href="#">
                                 About
